@@ -31,14 +31,28 @@ import com.questhelper.questinfo.QuestDescriptor;
 import com.questhelper.questinfo.QuestHelperQuest;
 import com.questhelper.requirements.Requirement;
 import com.questhelper.requirements.item.ItemRequirement;
+import com.questhelper.requirements.item.ItemRequirements;
 import com.questhelper.requirements.player.SkillRequirement;
 import com.questhelper.requirements.quest.QuestRequirement;
+import static com.questhelper.requirements.util.LogicHelper.and;
+import static com.questhelper.requirements.util.LogicHelper.or;
+import com.questhelper.requirements.util.LogicType;
+import com.questhelper.requirements.var.VarbitRequirement;
 import com.questhelper.requirements.zone.Zone;
+import com.questhelper.requirements.zone.ZoneRequirement;
 import com.questhelper.rewards.ExperienceReward;
 import com.questhelper.rewards.QuestPointReward;
 import com.questhelper.rewards.UnlockReward;
+import com.questhelper.steps.ConditionalStep;
+import com.questhelper.steps.DetailedQuestStep;
+import com.questhelper.steps.ItemStep;
+import com.questhelper.steps.NpcStep;
+import com.questhelper.steps.ObjectStep;
 import com.questhelper.steps.QuestStep;
 import net.runelite.api.ItemID;
+import net.runelite.api.NpcID;
+import net.runelite.api.NullObjectID;
+import net.runelite.api.ObjectID;
 import net.runelite.api.QuestState;
 import net.runelite.api.Skill;
 import java.util.ArrayList;
@@ -47,6 +61,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import net.runelite.api.coords.WorldPoint;
 
 @QuestDescriptor(
 	quest = QuestHelperQuest.AT_FIRST_LIGHT
@@ -54,21 +69,26 @@ import java.util.Map;
 public class AtFirstLight extends BasicQuestHelper
 {
 	//Items Required
-	ItemRequirement needle, boxTrap, hammer, jerboaTail;
+	ItemRequirement needle, boxTrap, hammer, jerboaTail, jerboaTailOrBoxTrap, jerboaTail2OrBoxTrap;
 
 	// Items Recommended
 	ItemRequirement staminaPotion;
 
 	// Quest Items
-	Requirement toyMouse, toyMouseWound, smoothLeaf, stickyLeaf, makeshiftPoultice, furSample, trimmedFur, foxsReport;
+	ItemRequirement toyMouse, toyMouseWound, smoothLeaf, stickyLeaf, makeshiftPoultice, furSample, trimmedFur, foxsReport;
 
-	QuestStep talkToApatura, goDownTree, talkToVerity, talkToWolf, petKiko, windUpToy, useToyOnKiko,
+	QuestStep talkToApatura, goDownTree, talkToVerity, talkToWolf, windUpToy, useToyOnKiko,
 		checkBed, returnToWolf, goUpTree, talkToFox, takeLeaf, takeSecondLeaf, catchJerboa, useTailOnLeaves,
-		returnToFox, talkToAtza, makeEquipmentPile, talkToAtzaForTrim, returnToFoxAfterTrim, goDownTreeEnd, talkToVerityEnd,
-		useJerboaTailOnBed, talkToApaturaToFinishQuest;
+		returnToFox, talkToFoxAfterPoultice, talkToAtza, talkToAtzaAfterHandingFur, makeEquipmentPile, talkToAtzaForTrim,
+		returnToFoxAfterTrim, getReportFromFox, goDownTreeEnd, talkToVerityEnd, useJerboaTailOnBed, goUpTreeToFinishQuest,
+		talkToApaturaToFinishQuest;
+
+	QuestStep buyBoxTrap, takeNeedle, takeHammer;
 
 	//Zones
-	Zone z;
+	Zone guild;
+
+	Requirement inGuild, gotMouse, usedMouse, checkedBed, equipmentUsable, repairedEquipment, hadReport, handedInReport;
 
 	@Override
 	public Map<Integer, QuestStep> loadSteps()
@@ -79,27 +99,74 @@ public class AtFirstLight extends BasicQuestHelper
 		setupConditions();
 		setupSteps();
 
-//		steps.put(1, step);
+		// 9841 0->1?? Birb?
+		steps.put(0, talkToApatura);
+
+		ConditionalStep enterTree =  new ConditionalStep(this, goDownTree);
+
+		ConditionalStep goTalkToVerity = enterTree.copy();
+		goTalkToVerity.addStep(inGuild, talkToVerity);
+		steps.put(1, goTalkToVerity);
+
+		ConditionalStep goTalkToWolf = enterTree.copy();
+		goTalkToWolf.addStep(inGuild, talkToWolf);
+		steps.put(2, goTalkToWolf);
+
+		ConditionalStep goDistractCat = enterTree.copy();
+		goDistractCat.addStep(and(inGuild, checkedBed), returnToWolf);
+		goDistractCat.addStep(and(inGuild, usedMouse), checkBed);
+		goDistractCat.addStep(and(inGuild, toyMouseWound), useToyOnKiko);
+		goDistractCat.addStep(and(inGuild, gotMouse), windUpToy);
+		goDistractCat.addStep(inGuild, talkToWolf);
+		steps.put(3, goDistractCat);
+
+		ConditionalStep goFindFox = new ConditionalStep(this, buyBoxTrap);
+		goFindFox.addStep(inGuild, goUpTree);
+		goFindFox.addStep(boxTrap, talkToFox);
+		steps.put(4, goFindFox);
+
+		ConditionalStep goMakePoultice = new ConditionalStep(this, takeLeaf);
+		goMakePoultice.addStep(and(makeshiftPoultice), returnToFox);
+		goMakePoultice.addStep(and(smoothLeaf, stickyLeaf, jerboaTail.quantity(2)), useTailOnLeaves);
+		goMakePoultice.addStep(and(smoothLeaf, stickyLeaf), catchJerboa);
+		goMakePoultice.addStep(smoothLeaf, takeSecondLeaf);
+		steps.put(5, goMakePoultice);
+
+		steps.put(6, talkToFoxAfterPoultice);
+
+		// You can get more fur even if some is in your bank
+		ConditionalStep bringAtzaFur = new ConditionalStep(this, talkToFoxAfterPoultice);
+		bringAtzaFur.addStep(furSample, talkToAtza);
+		steps.put(7, bringAtzaFur);
+
+		ConditionalStep goRepairEquipment = new ConditionalStep(this, talkToAtzaAfterHandingFur);
+		goRepairEquipment.addStep(repairedEquipment, talkToAtzaForTrim);
+		goRepairEquipment.addStep(and(equipmentUsable, hammer), makeEquipmentPile);
+		goRepairEquipment.addStep(equipmentUsable, takeHammer);
+		steps.put(8, goRepairEquipment);
+
+		ConditionalStep goWithTrimToFox = new ConditionalStep(this, talkToAtzaForTrim);
+		goWithTrimToFox.addStep(trimmedFur, returnToFoxAfterTrim);
+		steps.put(9, goWithTrimToFox);
+
+		ConditionalStep goToVerityWithReport = new ConditionalStep(this, talkToAtzaForTrim);
+		goToVerityWithReport.addStep(and(inGuild, trimmedFur, handedInReport, needle), useJerboaTailOnBed);
+		goToVerityWithReport.addStep(and(inGuild, trimmedFur, hadReport, needle), talkToVerityEnd);
+		goToVerityWithReport.addStep(and(trimmedFur, hadReport, needle), goDownTreeEnd);
+		goToVerityWithReport.addStep(and(trimmedFur, hadReport), takeNeedle);
+		goToVerityWithReport.addStep(trimmedFur, getReportFromFox);
+		steps.put(10, goToVerityWithReport);
+
+		ConditionalStep goFinishQuest = new ConditionalStep(this, talkToApaturaToFinishQuest);
+		goFinishQuest.addStep(inGuild, goUpTreeToFinishQuest);
+		steps.put(11, goFinishQuest);
 
 		return steps;
-
-		// NpcID.REGULUS_CENTO_12883
-		// Told about going to place, 9652 1->2
-		// "Let's do it!"
-
-		// Gone to place:
-
-		// 9650 0->1
-		// 9652 2->3
-		// Varp 4066 238 -> 494
-
-		// Talked about twins to west
-		// 9652 3->4
 	}
 
 	private void setupZones()
 	{
-
+		guild = new Zone(new WorldPoint(1540, 9409, 0), new WorldPoint(1580, 9470, 0));
 	}
 
 	@Override
@@ -109,10 +176,14 @@ public class AtFirstLight extends BasicQuestHelper
 		needle = new ItemRequirement("Needle", ItemID.NEEDLE).isNotConsumed();
 		needle.canBeObtainedDuringQuest();
 		boxTrap = new ItemRequirement("Box trap", ItemID.BOX_TRAP).isNotConsumed();
+		boxTrap.setTooltip("You can buy one from Imia in the north of the Hunter Guild's surface area for 41gp.");
 		hammer = new ItemRequirement("Hammer", ItemCollections.HAMMER).isNotConsumed();
 		hammer.canBeObtainedDuringQuest();
-		jerboaTail = new ItemRequirement("Jerboa tails", ItemID.JERBOA_TAIL);
+		jerboaTail = new ItemRequirement("Jerboa tail", ItemID.JERBOA_TAIL);
 		jerboaTail.canBeObtainedDuringQuest();
+
+		jerboaTailOrBoxTrap = new ItemRequirements(LogicType.OR, "Jerboa tail, or a box trap to get some", jerboaTail, boxTrap);
+		jerboaTail2OrBoxTrap = new ItemRequirements(LogicType.OR, "2 Jerboa tails, or a box trap to get some", jerboaTail.quantity(2), boxTrap);
 
 		// Recommended
 		staminaPotion = new ItemRequirement("Stamina potions", ItemCollections.STAMINA_POTIONS);
@@ -125,24 +196,102 @@ public class AtFirstLight extends BasicQuestHelper
 		makeshiftPoultice = new ItemRequirement("Makeshift poultice", ItemID.MAKESHIFT_POULTICE);
 		furSample = new ItemRequirement("Fur sample", ItemID.FUR_SAMPLE);
 		trimmedFur = new ItemRequirement("Trimmed fur", ItemID.TRIMMED_FUR);
-		foxsReport = new ItemRequirement("Fox's report", ItemID.FOXS_REPORT);
 	}
 
 	private void setupConditions()
 	{
+		inGuild = new ZoneRequirement(guild);
+		gotMouse = new VarbitRequirement(9843, 1);
+		usedMouse = new VarbitRequirement(9839, 1);
+		checkedBed = new VarbitRequirement(9837, 1);
 
+		// 9842 0->1, received pelt once
+		equipmentUsable = new VarbitRequirement(9840, 1);
+		repairedEquipment = new VarbitRequirement(9840, 2);
+		handedInReport = new VarbitRequirement(9836, 1);
+		hadReport = or(foxsReport, handedInReport);
+
+		foxsReport = new ItemRequirement("Fox's report", ItemID.FOXS_REPORT).hideConditioned(handedInReport);
+
+		// Bed repaired, 9838 0->1
 	}
 
 	private void setupSteps()
 	{
+		talkToApatura = new NpcStep(this, NpcID.GUILDMASTER_APATURA, new WorldPoint(1554, 3033, 0),
+			"Talk to Guildmaster Apatura in the Hunter Guild, south-west of Civitas illa Fortis.");
+		talkToApatura.addDialogSteps("Can I help you with anything?", "Yes.");
+		goDownTree = new ObjectStep(this, ObjectID.STAIRS_51641, new WorldPoint(1557, 3048, 0),
+			"Go down the stairs in the tree in the guild.");
+		talkToVerity = new NpcStep(this, NpcID.GUILD_SCRIBE_VERITY, new WorldPoint(1559, 9464, 0),
+			"Talk to Guild Scribe Verity behind the bar.");
+		talkToWolf = new NpcStep(this, NpcID.GUILD_HUNTER_WOLF_MASTER, new WorldPoint(1555, 9462, 0),
+			"Talk to Guild Hunter Wolf (Master), next to the bar.");
+		windUpToy = new DetailedQuestStep(this, "Wind up a toy mouse.", toyMouse.highlighted());
+		windUpToy.addIcon(ItemID.TOY_MOUSE_WOUND);
+		useToyOnKiko = new NpcStep(this, NpcID.GUILD_HUNTER_KIKO, new WorldPoint(1552, 9460, 0),
+			"Use the wound up toy mouse on Guild Hunter Kiko near the bar.", toyMouseWound.highlighted());
+		checkBed = new ObjectStep(this, ObjectID.CAT_BED, new WorldPoint(1552, 9460, 0),
+			"Check the cat's bed.");
+		returnToWolf = new NpcStep(this, NpcID.GUILD_HUNTER_WOLF_MASTER, new WorldPoint(1555, 9462, 0),
+			"Return to Guild Hunter Wolf (Master), next to the bar.");
+		goUpTree = new ObjectStep(this, ObjectID.STAIRS_51642, new WorldPoint(1557, 9449, 0),
+			"Go back up the stairs.");
+		talkToFox = new NpcStep(this, NpcID.GUILD_HUNTER_FOX, new WorldPoint(1623, 2982, 0),
+			"Talk to Guild Hunter Fox near the crevice south-east of the Hunter Guild.");
+		takeLeaf = new ObjectStep(this, NullObjectID.NULL_50876, new WorldPoint(1618, 2979, 0),
+			"Search the leafy bush south of the crevice for a smooth leaf.");
+		takeSecondLeaf = new ObjectStep(this, NullObjectID.NULL_50877, new WorldPoint(1673, 2992, 0),
+			"Search the rough-looking bush on the west side of the Locus Oasis.");
+		catchJerboa = new DetailedQuestStep(this, new WorldPoint(1664, 3003, 0),
+			"Catch two Embertailed Jerboa for their tails.", boxTrap.highlighted());
+		catchJerboa.addIcon(ItemID.BOX_TRAP);
+		useTailOnLeaves = new DetailedQuestStep(this, "Use the tails on the leaves.",
+			jerboaTail.highlighted(), smoothLeaf.highlighted());
+		returnToFox = new NpcStep(this, NpcID.GUILD_HUNTER_FOX, new WorldPoint(1623, 2982, 0),
+			"Bring the poultice back to Guild Hunter Fox near the crevice.", makeshiftPoultice);
+		talkToFoxAfterPoultice = new NpcStep(this, NpcID.GUILD_HUNTER_FOX, new WorldPoint(1623, 2982, 0),
+			"Talk to Guild Hunter Fox.");
+		talkToAtza = new NpcStep(this, NpcID.ATZA, new WorldPoint(1696, 3063, 0),
+			"Talk to Atza in one of the buildings outside Civitas illa Fortis' south wall, west of the general store.",
+			furSample);
+		talkToAtzaAfterHandingFur = new NpcStep(this, NpcID.ATZA, new WorldPoint(1696, 3063, 0),
+			"Talk to Atza in one of the buildings outside Civitas illa Fortis' south wall, west of the general store.");
+		talkToAtza.addSubSteps(talkToAtzaAfterHandingFur);
+		makeEquipmentPile = new ObjectStep(this, NullObjectID.NULL_52976, new WorldPoint(1697, 3063, 0),
+			"Set-up the pile of equipment next to Atza.", hammer);
+		talkToAtzaForTrim = new NpcStep(this, NpcID.ATZA, new WorldPoint(1696, 3063, 0),
+			"Talk to Atza again for some trimmed fur.");
+		returnToFoxAfterTrim = new NpcStep(this, NpcID.GUILD_HUNTER_FOX, new WorldPoint(1623, 2982, 0),
+			"Return to Guild Hunter Fox near the crevice south-east of the Hunter Guild to get his report.", trimmedFur);
+		getReportFromFox = new NpcStep(this, NpcID.GUILD_HUNTER_FOX, new WorldPoint(1623, 2982, 0),
+			"Return back to Fox to get his report.");
+		returnToFoxAfterTrim.addSubSteps(getReportFromFox);
+		goDownTreeEnd = new ObjectStep(this, ObjectID.STAIRS_51641, new WorldPoint(1557, 3048, 0),
+			"Go down the stairs in the tree in the Hunters Guild.", foxsReport, trimmedFur, jerboaTail, needle);
+		talkToVerityEnd = new NpcStep(this, NpcID.GUILD_SCRIBE_VERITY, new WorldPoint(1559, 9464, 0),
+			"Talk to Guild Scribe Verity behind the bar again.");
+		useJerboaTailOnBed = new ObjectStep(this, ObjectID.CAT_BED, new WorldPoint(1552, 9460, 0),
+			"Use a jerboa tail on the cat bed.", jerboaTail.highlighted(), trimmedFur, needle);
+		useJerboaTailOnBed.addIcon(ItemID.JERBOA_TAIL);
+		goUpTreeToFinishQuest = new ObjectStep(this, ObjectID.STAIRS_51642, new WorldPoint(1557, 9449, 0),
+			"Go back up the stairs and talk to Guildmaster Apatura to finish the quest.");
+		talkToApaturaToFinishQuest = new NpcStep(this, NpcID.GUILDMASTER_APATURA, new WorldPoint(1554, 3033, 0),
+			"Talk to Guildmaster Apatura to finish the quest.");
+		goUpTreeToFinishQuest.addSubSteps(talkToApaturaToFinishQuest);
 
-
+		buyBoxTrap = new NpcStep(this, NpcID.IMIA, new WorldPoint(1562, 3060, 0),
+			"Get a box trap. You can buy one from Imia in the north of the Hunter Guild's surface for 41gp.");
+		buyBoxTrap.addWidgetHighlightWithItemIdRequirement(300, 16, ItemID.BOX_TRAP, true);
+		takeNeedle = new ItemStep(this, new WorldPoint(1566, 3035, 0),
+			"Take the needle in the Hunter Guild's surface area, in its south-east corner.", needle);
+		takeHammer = new ItemStep(this, new WorldPoint(1696, 3070, 0), "Take a hammer from the house north of Atza.", hammer);
 	}
 
 	@Override
 	public List<ItemRequirement> getItemRequirements()
 	{
-		return Arrays.asList(needle, boxTrap, hammer, jerboaTail.quantity(2));
+		return Arrays.asList(jerboaTail2OrBoxTrap, hammer, needle);
 	}
 
 	@Override
@@ -189,7 +338,18 @@ public class AtFirstLight extends BasicQuestHelper
 	{
 		List<PanelDetails> allSteps = new ArrayList<>();
 
-//		allSteps.add(new PanelDetails("", Arrays.asList());
+		allSteps.add(new PanelDetails("Helping out", List.of(
+			talkToApatura, goDownTree, talkToVerity, talkToWolf, windUpToy, useToyOnKiko,
+			checkBed, returnToWolf
+		)));
+		allSteps.add(new PanelDetails("On the hunt", List.of(
+			goUpTree, buyBoxTrap, talkToFox, takeLeaf, takeSecondLeaf, catchJerboa, useTailOnLeaves,
+			returnToFox, talkToFoxAfterPoultice
+		), jerboaTailOrBoxTrap));
+		allSteps.add(new PanelDetails("Bed repairs", List.of(
+			talkToAtza, takeHammer, makeEquipmentPile, talkToAtzaForTrim, returnToFoxAfterTrim, takeNeedle,
+			goDownTreeEnd, talkToVerityEnd, useJerboaTailOnBed, goUpTreeToFinishQuest
+		), hammer, needle, jerboaTail));
 
 		return allSteps;
 	}
